--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "gulp-uglify": "^1.4.1",
         "gulp-util": "^3.0.4",
         "merge2": "^0.3.6",
+        "monaco-editor": "^0.11.1",
         "nodejs-fs-utils": "~1.0.26",
         "run-sequence": "~1.1.0",
         "sync-exec": "0.6.2",
