--- a/package.json
+++ b/package.json
@@ -49,7 +49,13 @@
         "vinyl-paths": "^2.1.0"
     },
     "devDependencies": {
-        "jstoxml": "~0.2.3"
+        "gulp-karma": "~0.0.4",
+        "jasmine-core": "~2.1.3",
+        "jasmine-reporters": "^2.2.0",
+        "jstoxml": "~0.2.3",
+        "karma": "~0.13",
+        "karma-chrome-launcher": "~0.1.7",
+        "karma-jasmine": "~0.3.4"
     },
     "autoupdate": {
         "source": "git",
