--- a/package.json
+++ b/package.json
@@ -46,10 +46,17 @@
         "nodejs-fs-utils": "~1.0.26",
         "run-sequence": "~1.1.0",
         "sync-exec": "0.6.2",
-        "vinyl-paths": "^2.1.0"
+        "vinyl-paths": "^2.1.0",
+        "yargs": "3.10.0"
     },
     "devDependencies": {
-        "jstoxml": "~0.2.3"
+        "gulp-karma": "~0.0.4",
+        "jasmine-core": "~2.1.3",
+        "jasmine-reporters": "^2.2.0",
+        "jstoxml": "~0.2.3",
+        "karma": "~0.13",
+        "karma-chrome-launcher": "~0.1.7",
+        "karma-jasmine": "~0.3.4"
     },
     "autoupdate": {
         "source": "git",
