new test event pane

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "email": "erann@iguazio.com"
     },
     "dependencies": {
+        "angular-download": "0.0.5",
         "babel-core": "^6.26.0",
         "babel-plugin-angularjs-annotate": "^0.8.2",
         "babel-polyfill": "^6.26.0",
