--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
         "lodash": "4.17.4",
         "moment": "~2.9.0",
         "ng-dialog": "~0.6.4",
-        "ng-file-upload": "~12.2.13"
+        "ng-file-upload": "~12.2.13",
+        "js-base64": "^2.4.8"
     }
 }
