Fix [Nuclio] Various issues when integrating with Iguazio
- Remove `ui` property on project update
- Shift `created_by` and `created_date` properties on project update to
  demo-mode only
- Rename `spec.disable` to `spec.disabled` in function model
- Shift `spec.timeoutSeconds` in function model to demo-mode only
- If external IP address cannot be retrieved, display "N/A" for
  invocation URL

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,5 @@
 {
     "presets": ["env"],
-    "plugins": ["angularjs-annotate"]
+    "plugins": ["angularjs-annotate"],
+    "ignore": ["node_modules/iguazio.dashboard-controls/dist/js/iguazio.dashboard-controls.js"]
 }
