--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
     "presets": ["env"],
-    "plugins": ["angularjs-annotate"],
-    "ignore": ["node_modules/iguazio.dashboard-controls/dist/js/iguazio.dashboard-controls.js"]
+    "plugins": ["angularjs-annotate"]
 }
+
