Fix [Nuclio] Function creation/deletion not working + more
- Fix fetching of error status and message from response
- Fix race in project's functions listing screen
- Fix bug: function not deleted from function list
- Set `nuclio.io/project.name` on creating/updating a function
- Set `nuclio.io/function-name` on creating/updating a function event
- Add specific error message on 409 Conflict on deleting project

--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "bugs": {
         "url": "https://github.com/iguazio/dashboard-controls/issues"
     },
-    "keywords": ["Iguazio", "iguazio"],
+    "keywords": [
+        "Iguazio",
+        "iguazio"
+    ],
     "license": "Apache-2.0",
     "homepage": "https://github.com/iguazio/dashboard-controls",
     "author": {
