--- a/package.json
+++ b/package.json
@@ -21,11 +21,17 @@
         "email": "erann@iguazio.com"
     },
     "dependencies": {
+        "jquery": "*",
+        "angular": "~1.6.5",
         "angular-download": "0.0.5",
+        "angular-mocks": "~1.5.8",
+        "angular-ui-bootstrap": "~0.13.0",
+        "angular-ui-router": "~0.3.2",
         "babel-core": "^6.26.0",
         "babel-plugin-angularjs-annotate": "^0.8.2",
         "babel-polyfill": "^6.26.0",
         "babel-preset-env": "^1.6.1",
+        "bootstrap": "~3.3",
         "del": "^2.2.0",
         "eslint": "3.17.1",
         "eslint-plugin-angular": "1.4.1",
@@ -48,8 +54,14 @@
         "gulp-rev-collector": "^1.0.2",
         "gulp-uglify": "^1.4.1",
         "gulp-util": "^3.0.4",
+        "js-base64": "^2.4.8",
+        "jquery-ui": "1.12.0",
+        "lodash": "^4.17.4",
         "merge2": "^0.3.6",
+        "moment": "~2.9.0",
         "monaco-editor": "^0.11.1",
+        "ng-dialog": "~0.6.4",
+        "ng-file-upload": "~12.2.13",
         "nodejs-fs-utils": "~1.0.26",
         "run-sequence": "~1.1.0",
         "sync-exec": "0.6.2",
