--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "angular-download": "0.0.5",
         "angular-mocks": "~1.7.4",
         "angular-ui-bootstrap": "~2.5.6",
+        "angular-ui-layout": "~1.4.3",
         "babel-core": "^6.26.0",
         "babel-plugin-angularjs-annotate": "^0.8.2",
         "babel-polyfill": "^6.26.0",
