--- a/package.json
+++ b/package.json
@@ -34,14 +34,13 @@
         "babel-preset-env": "^1.6.1",
         "bootstrap": "~3.4.1",
         "del": "^2.2.0",
-        "eslint": "3.17.1",
-        "eslint-plugin-angular": "1.4.1",
+        "eslint-plugin-angular": "^4.0.1",
         "express": "4.12.3",
         "gulp": "^3.9.1",
         "gulp-babel": "^7.0.0",
         "gulp-concat": "~2.5.2",
         "gulp-cssnano": "^2.1.1",
-        "gulp-eslint": "3.0.1",
+        "gulp-eslint": "^6.0.0",
         "gulp-file-transform-cache": ">=1.0.6",
         "gulp-htmlmin": "^1.3.0",
         "gulp-if": "^1.2.5",
@@ -71,6 +70,7 @@
         "yargs": "3.10.0"
     },
     "devDependencies": {
+        "eslint": "^6.8.0",
         "jasmine-core": "~3.2.1",
         "jasmine-reporters": "^2.3.2",
         "jstoxml": "~0.2.3",
