--- a/package.json
+++ b/package.json
@@ -74,9 +74,9 @@
         "jasmine-core": "~3.2.1",
         "jasmine-reporters": "^2.3.2",
         "jstoxml": "~0.2.3",
-        "karma": "~3.0.0",
-        "karma-chrome-launcher": "~2.2.0",
-        "karma-jasmine": "~1.1.2"
+        "karma": "^4.4.1",
+        "karma-chrome-launcher": "^3.1.0",
+        "karma-jasmine": "^3.1.1"
     },
     "autoupdate": {
         "source": "git",
