--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     },
     "dependencies": {
         "@uirouter/angularjs": "^1.0.20",
-        "angular": "~1.7.7",
+        "angular": "^1.7.9",
         "angular-download": "0.0.5",
-        "angular-mocks": "~1.7.4",
-        "angular-sanitize": "^1.7.8",
+        "angular-mocks": "^1.7.9",
+        "angular-sanitize": "^1.7.9",
         "angular-ui-bootstrap": "~2.5.6",
         "angular-ui-layout": "~1.4.3",
         "babel-core": "^6.26.0",
@@ -42,9 +42,9 @@
         "gulp-cssnano": "^2.1.1",
         "gulp-eslint": "^6.0.0",
         "gulp-file-transform-cache": ">=1.0.6",
-        "gulp-htmlmin": "^1.3.0",
+        "gulp-htmlmin": "^5.0.1",
         "gulp-if": "^1.2.5",
-        "gulp-imagemin": "^4.1.0",
+        "gulp-imagemin": "^7.1.0",
         "gulp-less": "4.0.1",
         "gulp-less-import": "^1.0.0",
         "gulp-ng-html2js": "^0.2.0",
@@ -59,7 +59,7 @@
         "js-base64": "^2.4.8",
         "lodash": "^4.17.11",
         "merge2": "^0.3.6",
-        "moment": "~2.24.0",
+        "moment": "^2.24.0",
         "monaco-editor": "^0.11.1",
         "ng-dialog": "~0.6.4",
         "ng-file-upload": "~12.2.13",
