--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "merge2": "^0.3.6",
         "moment": "^2.24.0",
         "monaco-editor": "^0.11.1",
+        "natives": "^1.1.6",
         "ng-dialog": "~0.6.4",
         "ng-file-upload": "~12.2.13",
         "ng-i18next": "^1.0.5",
