--- a/package.json
+++ b/package.json
@@ -1,89 +1,89 @@
 {
-    "name": "iguazio.dashboard-controls",
-    "version": "0.38.10",
-    "main": "dist/js/iguazio.dashboard-controls.js",
-    "description": "Collection of resources (such as CSS styles, fonts and images) and AngularJs 1.x components and services to share among different Iguazio repos.",
-    "repository": {
-        "type": "git",
-        "url": "git@github.com:iguazio/dashboard-controls.git"
-    },
-    "bugs": {
-        "url": "https://github.com/iguazio/dashboard-controls/issues"
-    },
-    "keywords": [
-        "Iguazio",
-        "iguazio"
-    ],
-    "license": "Apache-2.0",
-    "homepage": "https://github.com/iguazio/dashboard-controls",
-    "author": {
-        "name": "Eran Nussbaum",
-        "email": "erann@iguazio.com"
-    },
-    "dependencies": {
-        "@uirouter/angularjs": "^1.0.20",
-        "angular": "^1.7.9",
-        "angular-download": "0.0.5",
-        "angular-mocks": "^1.7.9",
-        "angular-sanitize": "^1.7.9",
-        "angular-ui-bootstrap": "~2.5.6",
-        "babel-core": "^6.26.0",
-        "babel-plugin-angularjs-annotate": "^0.8.2",
-        "babel-polyfill": "^6.26.0",
-        "babel-preset-env": "^1.6.1",
-        "bootstrap": "~3.4.1",
-        "del": "^2.2.0",
-        "eslint-plugin-angular": "^4.0.1",
-        "express": "4.12.3",
-        "gulp": "^3.9.1",
-        "gulp-babel": "^7.0.0",
-        "gulp-concat": "~2.5.2",
-        "gulp-eslint": "^6.0.0",
-        "gulp-file-transform-cache": ">=1.0.6",
-        "gulp-htmlmin": "^5.0.1",
-        "gulp-if": "^1.2.5",
-        "gulp-imagemin": "^7.1.0",
-        "gulp-less": "4.0.1",
-        "gulp-less-import": "^1.0.0",
-        "gulp-ng-html2js": "^0.2.0",
-        "gulp-preprocess": "^2.0.0",
-        "gulp-rename": "~1.2.2",
-        "gulp-rev": "^6.0.1",
-        "gulp-rev-collector": "^1.0.2",
-        "gulp-uglify": "^3.0.2",
-        "i18next": "^15.1.3",
-        "jquery": "*",
-        "jquery-ui": "1.12.0",
-        "js-base64": "^2.4.8",
-        "lodash": "^4.17.11",
-        "merge2": "^0.3.6",
-        "moment": "^2.24.0",
-        "monaco-editor": "^0.11.1",
-        "natives": "^1.1.6",
-        "ng-dialog": "~0.6.4",
-        "ng-file-upload": "~12.2.13",
-        "ng-i18next": "^1.0.5",
-        "nodejs-fs-utils": "~1.0.26",
-        "run-sequence": "~1.1.0",
-        "vinyl-paths": "^2.1.0",
-        "yargs": "3.10.0"
-    },
-    "devDependencies": {
-        "eslint": "^6.8.0",
-        "jasmine-core": "~3.2.1",
-        "jasmine-reporters": "^2.4.0",
-        "jstoxml": "~0.2.3",
-        "karma": "^6.3.1",
-        "karma-chrome-launcher": "^3.1.0",
-        "karma-jasmine": "^3.1.1"
-    },
-    "autoupdate": {
-        "source": "git",
-        "target": "https://github.com/iguazio/dashboard-controls.git",
-        "basePath": "",
-        "files": [
-            "dist/js/iguazio.dashboard-controls.js",
-            "dist/less/iguazio.dashboard-controls.less"
-        ]
-    }
+  "name": "iguazio.dashboard-controls",
+  "version": "0.38.10-patch1",
+  "main": "dist/js/iguazio.dashboard-controls.js",
+  "description": "Collection of resources (such as CSS styles, fonts and images) and AngularJs 1.x components and services to share among different Iguazio repos.",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:iguazio/dashboard-controls.git"
+  },
+  "bugs": {
+    "url": "https://github.com/iguazio/dashboard-controls/issues"
+  },
+  "keywords": [
+    "Iguazio",
+    "iguazio"
+  ],
+  "license": "Apache-2.0",
+  "homepage": "https://github.com/iguazio/dashboard-controls",
+  "author": {
+    "name": "Eran Nussbaum",
+    "email": "erann@iguazio.com"
+  },
+  "dependencies": {
+    "@uirouter/angularjs": "^1.0.20",
+    "angular": "^1.7.9",
+    "angular-download": "0.0.5",
+    "angular-mocks": "^1.7.9",
+    "angular-sanitize": "^1.7.9",
+    "angular-ui-bootstrap": "~2.5.6",
+    "babel-core": "^6.26.0",
+    "babel-plugin-angularjs-annotate": "^0.8.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "bootstrap": "~3.4.1",
+    "del": "^2.2.0",
+    "eslint-plugin-angular": "^4.0.1",
+    "express": "4.12.3",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.0",
+    "gulp-concat": "~2.5.2",
+    "gulp-eslint": "^6.0.0",
+    "gulp-file-transform-cache": ">=1.0.6",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-if": "^1.2.5",
+    "gulp-imagemin": "^7.1.0",
+    "gulp-less": "4.0.1",
+    "gulp-less-import": "^1.0.0",
+    "gulp-ng-html2js": "^0.2.0",
+    "gulp-preprocess": "^2.0.0",
+    "gulp-rename": "~1.2.2",
+    "gulp-rev": "^6.0.1",
+    "gulp-rev-collector": "^1.0.2",
+    "gulp-uglify": "^3.0.2",
+    "i18next": "^15.1.3",
+    "jquery": "*",
+    "jquery-ui": "1.12.0",
+    "js-base64": "^2.4.8",
+    "lodash": "^4.17.11",
+    "merge2": "^0.3.6",
+    "moment": "^2.24.0",
+    "monaco-editor": "^0.11.1",
+    "natives": "^1.1.6",
+    "ng-dialog": "~0.6.4",
+    "ng-file-upload": "~12.2.13",
+    "ng-i18next": "^1.0.5",
+    "nodejs-fs-utils": "~1.0.26",
+    "run-sequence": "~1.1.0",
+    "vinyl-paths": "^2.1.0",
+    "yargs": "3.10.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "jasmine-core": "~3.2.1",
+    "jasmine-reporters": "^2.4.0",
+    "jstoxml": "~0.2.3",
+    "karma": "^6.3.1",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-jasmine": "^3.1.1"
+  },
+  "autoupdate": {
+    "source": "git",
+    "target": "https://github.com/iguazio/dashboard-controls.git",
+    "basePath": "",
+    "files": [
+      "dist/js/iguazio.dashboard-controls.js",
+      "dist/less/iguazio.dashboard-controls.less"
+    ]
+  }
 }
