--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iguazio.dashboard-controls",
-  "version": "0.39.12-3.5.2",
+  "version": "0.39.13-3.5.3_1",
   "main": "dist/js/iguazio.dashboard-controls.js",
   "description": "Collection of resources (such as CSS styles, fonts and images) and AngularJs 1.x components and services to share among different Iguazio repos.",
   "repository": {
