--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "email": "erann@iguazio.com"
     },
     "dependencies": {
-        "babel-core": "^6.26.0",
+        "@babel/core": "^7.24.0",
+        "@babel/preset-env": "^7.24.0",
         "@uirouter/angularjs": "^1.0.20",
         "angular": "^1.8.0",
         "angular-download": "0.0.5",
@@ -29,29 +30,27 @@
         "angular-sanitize": "^1.8.0",
         "angular-ui-bootstrap": "~2.5.6",
         "babel-plugin-angularjs-annotate": "^0.8.2",
-        "babel-polyfill": "^6.26.0",
-        "babel-preset-env": "^1.6.1",
         "bootstrap": "~3.4.1",
-        "del": "^2.2.0",
+        "del": "^6.1.1",
         "eslint-plugin-angular": "^4.0.1",
         "express": "4.18.1",
         "gulp": "^4.0.2",
-        "gulp-babel": "^7.0.0",
+        "gulp-babel": "^8.0.0",
         "gulp-concat": "^2.6.1",
         "gulp-eslint": "^6.0.0",
-        "gulp-file-transform-cache": ">=1.0.6",
+        "gulp-file-transform-cache": "^2.0.0",
         "gulp-htmlmin": "^5.0.1",
         "gulp-if": "^3.0.0",
         "gulp-imagemin": "^7.1.0",
-        "gulp-less": "4.0.1",
+        "gulp-less": "^5.0.0",
         "gulp-less-import": "^1.0.0",
         "gulp-ng-html2js": "^0.2.0",
         "gulp-preprocess": "^4.0.2",
         "gulp-rename": "~1.2.2",
-        "gulp-rev": "^6.0.1",
+        "gulp-rev": "^9.0.0",
         "gulp-rev-collector": "^1.0.2",
         "gulp-uglify": "^3.0.2",
-        "i18next": "^15.1.3",
+        "i18next": "^21.6.14",
         "jquery": "*",
         "jquery-ui": "1.13.2",
         "js-base64": "^2.4.8",
@@ -62,11 +61,11 @@
         "natives": "^1.1.6",
         "ng-dialog": "~0.6.4",
         "ng-file-upload": "~12.2.13",
-        "ng-i18next": "^1.0.5",
+        "ng-i18next": "^1.0.7",
         "nodejs-fs-utils": "~1.0.26",
         "restangular": "^1.6.1",
         "vinyl-paths": "^3.0.1",
-        "yargs": "3.10.0"
+        "yargs": "^17.7.2"
     },
     "devDependencies": {
         "eslint": "^7.32.0",
